--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "all:update-packages": "cd packages/components && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../templates && bun update && cd ../types && bun update",
     "all:update-versions": "cd ../components && npm version patch --legacy-peer-deps && cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../templates && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components",
-    "all:build": "bun run build:components && bun run build:server && bun run build:shared && bun run build:templates && bun run build:types",
+    "all:build": "bun run build:templates && bun run build:types && bun run build:api && bun run build:components && bun run build:server && bun run build:shared",
     "all:beta": "bun run beta:components && bun run beta:server && bun run beta:shared && bun run beta:templates && bun run beta:types",
     "all:prod": "bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:templates && bun run prod:types",
     "all:test": "bun run test:shared && bun run test:server",
+    "build:api": "cd packages/api && bun run build",
     "build:components": "cd packages/components && bun run build",
     "build:server": "cd packages/server && bun run build",
     "build:shared": "cd packages/shared && bun run build",
@@ -24,16 +25,19 @@
     "build:types": "cd packages/types && bun run build",
     "test:shared": "cd packages/shared && bun run test",
     "test:server": "cd packages/server && bun run test",
+    "typecheck:api": "cd packages/api && bun run typecheck",
     "typecheck:components": "cd packages/components && bun run typecheck",
     "typecheck:server": "cd packages/server && bun run typecheck",
     "typecheck:shared": "cd packages/shared && bun run typecheck",
     "typecheck:templates": "cd packages/templates && bun run typecheck",
     "typecheck:types": "cd packages/types && bun run typecheck",
+    "beta:api": "cd packages/api && npm version prerelease --preid=beta && npm publish --tag beta",
     "beta:components": "cd packages/components && npm version prerelease --preid=beta && npm publish --tag beta",
     "beta:server": "cd packages/server && npm version prerelease --preid=beta && npm publish --tag beta",
     "beta:shared": "cd packages/shared && npm version prerelease --preid=beta && npm publish --tag beta",
     "beta:templates": "cd packages/templates && npm version prerelease --preid=beta && npm publish --tag beta",
     "beta:types": "cd packages/types && npm version prerelease --preid=beta && npm publish --tag beta",
+    "prod:api": "cd packages/api && npm version patch --no-git-tag-version && npm publish --tag latest",
     "prod:components": "cd packages/components && npm version patch --no-git-tag-version && npm publish --tag latest",
     "prod:server": "cd packages/server && npm version patch --no-git-tag-version && npm publish --tag latest",
     "prod:shared": "cd packages/shared && npm version patch --no-git-tag-version && npm publish --tag latest",
