--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components",
     "all:build": "bun run build:templates && bun run build:types && bun run build:api && bun run build:components && bun run build:shared && bun run build:server",
     "all:beta": "bun run beta:components && bun run beta:server && bun run beta:shared && bun run beta:templates && bun run beta:types",
-    "all:prod": "bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:templates && bun run prod:types",
+    "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:templates && bun run prod:types",
     "all:test": "bun run test:shared && bun run test:server",
     "build:api": "cd packages/api && bun run build",
     "build:components": "cd packages/components && bun run build",
