--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "beta:shared": "cd packages/shared && npm version prerelease --preid=beta && npm publish --tag beta",
     "beta:templates": "cd packages/templates && npm version prerelease --preid=beta && npm publish --tag beta",
     "beta:types": "cd packages/types && npm version prerelease --preid=beta && npm publish --tag beta",
-    "prod:api": "cd packages/api",
-    "prod:components": "cd packages/components",
-    "prod:server": "cd packages/server",
-    "prod:shared": "cd packages/shared",
-    "prod:templates": "cd packages/templates",
-    "prod:types": "cd packages/types",
+    "prod:api": "cd packages/api && npm publish --tag latest",
+    "prod:components": "cd packages/components && npm publish --tag latest",
+    "prod:server": "cd packages/server && npm publish --tag latest",
+    "prod:shared": "cd packages/shared && npm publish --tag latest",
+    "prod:templates": "cd packages/templates && npm publish --tag latest",
+    "prod:types": "cd packages/types && npm publish --tag latest",
     "ccm": "./auto_commit.sh"
   },
   "type": "module",
