--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,9 +24,9 @@
     "slate-react": "^0.110.3"
   },
   "peerDependencies": {
-    "@remix-run/react": "^2.15.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1",
+    "react-router": ">=7.6.0"
   },
   "devDependencies": {
     "@types/is-hotkey": "^0.1.10",
