--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -32,6 +32,7 @@
     "@types/is-hotkey": "^0.1.10",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
+    "@types/react-scroll": "^1.8.10",
     "bun-types": "latest",
     "typescript": "^5.8.2",
     "vite": "^5.4.15"
